webkit/port/bindings/v8/v8_proxy.cpp
@@ -1292,9 +1292,8 @@ v8::Persistent<v8::FunctionTemplate> V8Proxy::GetTemplate(
                                                        V8ClassIndex::NODE);
       break;
     case V8ClassIndex::HTMLOPTIONSCOLLECTION:
-      setCollectionNamedGetter<HTMLOptionsCollection, Node>(
-          desc,
-          V8ClassIndex::NODE);
+      desc->InstanceTemplate()->SetNamedPropertyHandler(
+        USE_NAMED_PROPERTY_GETTER(HTMLCollection));
       desc->InstanceTemplate()->SetIndexedPropertyHandler(
           USE_INDEXED_PROPERTY_GETTER(HTMLOptionsCollection),
           USE_INDEXED_PROPERTY_SETTER(HTMLOptionsCollection));
@@ -1303,12 +1302,7 @@ v8::Persistent<v8::FunctionTemplate> V8Proxy::GetTemplate(
       break;
     case V8ClassIndex::HTMLSELECTELEMENT:
       desc->InstanceTemplate()->SetNamedPropertyHandler(
-          nodeCollectionNamedPropertyGetter<HTMLSelectElement>,
-          0,
-          0,
-          0,
-          0,
-          v8::Integer::New(V8ClassIndex::NODE));
+          USE_NAMED_PROPERTY_GETTER(HTMLSelectElementCollection));
       desc->InstanceTemplate()->SetIndexedPropertyHandler(
           nodeCollectionIndexedPropertyGetter<HTMLSelectElement>,
           USE_INDEXED_PROPERTY_SETTER(HTMLSelectElementCollection),
@@ -2408,6 +2402,7 @@ void* V8Proxy::ToNativeObjectImpl(V8ClassIndex::V8WrapperType type,
 
   return DOMWrapperToNative<void>(object);
 }
+
 
 v8::Handle<v8::Object> V8Proxy::LookupDOMWrapper(
     V8ClassIndex::V8WrapperType type, v8::Handle<v8::Value> value)
